# notebooked

./: .gitignore  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml
.github/workflows/: notebooked-pipeline.yml
docs/: ARCHITECTURE.md  QUICKSTART.md
src/notebooked/: cli.py
src/notebooked/core/: config.py  generator.py  models.py  parser.py  workflow.py
src/notebooked/providers/: azure_ml.py  base.py  local.py  sagemaker.py  vertex_ai.py
tests/: test_sagemaker_deployment.py
